--- a/spring-cloud/spring-eureka-consumer/src/main/resources/application.properties
+++ b/spring-cloud/spring-eureka-consumer/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-server.port=2223
-spring.application.name=ribbon-consumer
-eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+spring.application.name=config-server
+server.port=7001
+# git管理配置
+spring.cloud.config.server.git.uri=https://github.com/muarine/spring-cloud.git
+spring.cloud.config.server.git.searchPaths=spring-cloud/spring-config-server
+spring.cloud.config.server.git.username=username
+spring.cloud.config.server.git.password=password
