--- a/spring-cloud/spring-eureka-server/src/main/resources/application.properties
+++ b/spring-cloud/spring-eureka-server/src/main/resources/application.properties
@@ -5,3 +5,7 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 # 服务注册地址
 eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
+eureka.server.renewal-percent-threshold=0.85D
+
+eureka.server.eviction-interval-timer-in-ms=30000
+eureka.client.healthcheck.enabled=true
