--- a/spring-cloud/spring-config-client/pom.xml
+++ b/spring-cloud/spring-config-client/pom.xml
@@ -17,11 +17,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>www.muarine.com</groupId>
-  <artifactId>spring-config-server</artifactId>
-  <name>spring-config-server</name>
+  <artifactId>spring-config-client</artifactId>
+  <name>spring-config-client</name>
   <packaging>jar</packaging>
   <version>1.0.0</version>
-  <description>spring-config-server</description>
+  <description>spring-config-client</description>
   <url>http://www.muarine.com</url>
 
 	<properties>
