--- a/spring-cloud/spring-config-server/src/main/resources/application.properties
+++ b/spring-cloud/spring-config-server/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-server.port=2223
-spring.application.name=ribbon-consumer
-eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+spring.application.name=config-server
+server.port=7001
 
-# 调用服务超时时间
-#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=100000
+# 本地从resources文件夹加载
+#spring.profiles.active=native
+#spring.cloud.config.server.native.searchLocations=/home/muarine/config-repo
 
-
+# git管理配置
+spring.cloud.config.server.git.uri=https://github.com/muarine/spring-cloud.git
+spring.cloud.config.server.git.searchPaths=spring-cloud/spring-config-repo
+spring.cloud.config.server.git.username=username
+spring.cloud.config.server.git.password=password
