网关服务,测试提供两个service-A | 一个service-A,一个service-B

--- a/spring-cloud/spring-config-server/src/main/resources/application.properties
+++ b/spring-cloud/spring-config-server/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=7001
 #spring.cloud.config.server.native.searchLocations=/home/muarine/config-repo
 
 # git管理配置
-spring.cloud.config.server.git.uri=https://github.com/muarine/spring-cloud.git
-spring.cloud.config.server.git.searchPaths=spring-cloud/spring-config-repo
-spring.cloud.config.server.git.username=username
-spring.cloud.config.server.git.password=password
+spring.cloud.config.server.git.uri=https://github.com/muarine/spring-cloud
+spring.cloud.config.server.git.searchPaths=tree/master/spring-cloud/spring-config-repo
+spring.cloud.config.server.git.username=maoyun0903@163.com
+spring.cloud.config.server.git.password=yy901991
