--- a/spring-cloud/spring-eureka-service-A/src/main/resources/application.properties
+++ b/spring-cloud/spring-eureka-service-A/src/main/resources/application.properties
@@ -14,11 +14,8 @@
 # limitations under the License.
 #
 
-spring.application.name=pub
-spring.cloud.config.profile=dev
-spring.cloud.config.uri=http://localhost:7001/
-
-server.port=7002
+server.port=2224
+spring.application.name=service-A
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
 
-spring.profiles.active=dev
