--- a/spring-cloud/spring-web-gateway/src/main/resources/application.properties
+++ b/spring-cloud/spring-web-gateway/src/main/resources/application.properties
@@ -14,11 +14,18 @@
 # limitations under the License.
 #
 
-spring.application.name=pub
-spring.cloud.config.profile=dev
-spring.cloud.config.uri=http://localhost:7001/
+spring.application.name=api-gateway
+server.port=5555
 
-server.port=7002
+# routes to serviceId
+zuul.routes.api-a.path=/api-a/**
+zuul.routes.api-a.serviceId=service-A
 
+zuul.routes.api-b.path=/api-b/**
+zuul.routes.api-b.serviceId=service-B
 
-spring.profiles.active=dev
+# routes to url
+zuul.routes.api-a-url.path=/api-a-url/**
+zuul.routes.api-a-url.url=http://localhost:2222/
+
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
