--- a/spring-cloud/spring-config-server/src/main/resources/application.properties
+++ b/spring-cloud/spring-config-server/src/main/resources/application.properties
@@ -8,5 +8,5 @@ server.port=7001
 # git管理配置
 spring.cloud.config.server.git.uri=https://github.com/muarine/spring-cloud
 spring.cloud.config.server.git.searchPaths=tree/master/spring-cloud/spring-config-repo
-spring.cloud.config.server.git.username=maoyun0903@163.com
-spring.cloud.config.server.git.password=yy901991
+spring.cloud.config.server.git.username=username
+spring.cloud.config.server.git.password=password
