--- a/ms-discovery-eureka/src/main/resources/application.yml
+++ b/ms-discovery-eureka/src/main/resources/application.yml
@@ -3,8 +3,8 @@
 #    active: @env@
 
 ---
-spring:
-  profiles: peer1                                 # 指定profile=peer1
+#spring:
+#  profiles: peer1                                 # 指定profile=peer1
 server:
   port: 8761
 eureka:
@@ -12,16 +12,17 @@ eureka:
     hostname: peer1                               # 指定当profile=peer1时，主机名
   client:
     serviceUrl:
-      defaultZone: http://peer2:8762/eureka/      # 将自己注册到peer2这个Eureka上面去
+      defaultZone: http://peer1:8761/eureka/      # 将自己注册到peer1这个Eureka上面去
+#      defaultZone: http://peer2:8762/eureka/      # 将自己注册到peer2这个Eureka上面去
 
----
-spring:
-  profiles: peer2
-server:
-  port: 8762
-eureka:
-  instance:
-    hostname: peer2
-  client:
-    serviceUrl:
-      defaultZone: http://peer1:8761/eureka/
+#---
+#spring:
+#  profiles: peer2
+#server:
+#  port: 8762
+#eureka:
+#  instance:
+#    hostname: peer2
+#  client:
+#    serviceUrl:
+#      defaultZone: http://peer1:8761/eureka/
