--- a/ms-discovery-eureka/src/main/resources/application.yml
+++ b/ms-discovery-eureka/src/main/resources/application.yml
@@ -5,6 +5,9 @@
 ---
 #spring:
 #  profiles: peer1                                 # 指定profile=peer1
+spring:
+  application:
+    name: ms-eureka
 server:
   port: 8761
 eureka:
