--- a/ms-consumer-hello-ribbon-with-hystrix/src/main/resources/application.yml
+++ b/ms-consumer-hello-ribbon-with-hystrix/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8010
+  port: 8011
 spring:
   application:
-    name: ms-consumer-hello-ribbon
+    name: ms-consumer-hello-ribbon-with-hystrix
 eureka:
   client:
     serviceUrl:
       defaultZone: http://discovery:8761/eureka/
   instance:
-    preferIpAddress: true
+    hostname: ribbon
