--- a/ms-hystrix-dashboard/pom.xml
+++ b/ms-hystrix-dashboard/pom.xml
@@ -12,5 +12,15 @@
     <artifactId>ms-hystrix-dashboard</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
